nueva versión de invie - verde

--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
 			margin: 0;
 		}
 		img {
-			max-width: 100%;
+			width: 100%;
 			vertical-align: top;
 		}
 	</style>
 </head>
 <body>
-	<img src="header.jpg" alt="">
-	<img src="hero.jpg" alt="">
-	<img src="acustica.jpg" alt="">
-	<img src="clasica.jpg" alt="">
+	<img src="nueva-version.jpeg" alt="">
 </body>
 </html>
